# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
page_analyzer/: app.py  celery_config.py  db.py  helpers.py  html_parser.py  tasks.py  url_parser.py  url_validator.py
page_analyzer/templates/: 404.html  500.html  index.html  layout.html  url.html  urls.html
page_analyzer12/: app.py  db.py  helpers.py  url_validator.py
page_analyzer12/templates/: index.html
page_analyzer13/: app.py
page_analyzer13/templates/: layout.html  url.html  urls.html
